Make post layout look more like an actual blog post
TODO: Fix PostedBy to look like the dev.to header

--- a/pages/posts/third_post.mdx
+++ b/pages/posts/third_post.mdx
@@ -2,7 +2,7 @@ import Post from '../../components/layouts/Post';
 import { Image } from 'antd'
 
 export const meta = {
-    title: 'Markdown/MDX with Next.js',
+    title: '3rd post',
     author: 'Rob Kenis',
     created: new Date('2021-11-03T00:00:00Z')
 }
