Add section on creating EC2 instances

--- a/learn/open-source-on-aws/index.adoc
+++ b/learn/open-source-on-aws/index.adoc
@@ -2,16 +2,47 @@
 
 === Getting started
 
-Axxes accounts are managed through Active Directory. In the top left corner in Office365, search for an application
-called **AWS SSO**. A menu should show up with all available accounts, choose **traineeship-2022**.
+Axxes accounts are managed through Active Directory.
+In the top left corner in Office365, search for an application called **AWS SSO**.
+A menu should show up with all available accounts, choose **traineeship-2022**.
 
-In the top right corner in the AWS Console, there's a dropdown with available regions. Choose **eu-west-1**.
+In the top right corner in the AWS Console, there's a dropdown with available regions.
+Choose **eu-west-1**.
 
 In the top left corner, open **services** for an overview of available services in AWS.
 
 To install the AWS CLI, use the instructions https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html[here].
 
 === Setting up a server
+
+=== Creating an EC2 instance
+
+- Go to the **EC2** console
+- Pick **launch instance**, it should be a bright orange button.
+- Select an AMI, for this session, we will use **Amazon Linux 2 AMI (HVM), SSD Volume Type**
+- Pick an instance type, it doesn't have to be big, **t2.micro** will work just fine
+- Make sure a public IP will be assigned
+- No need to add storage
+- Add a tag with your name, e.g. **Name: Rob**
+- Add a security group with access to port **22** from **0.0.0.0/0**
+- Click launch and a pop-up will appear.
+Create a new key-pair and download it.
+- Confirm and the instance will start
+
+[source,shell]
+----
+$ aws ec2 run-instances --image-id ami-02b4e72b17337d6c1 --instance-type t2.nano --key-name rob --region eu-west-1
+----
+
+=== Connecting to the EC2 instance
+
+There are multiple ways to connect to a running EC2 instance, but I prefer **ssh**.
+
+[source, shell]
+----
+$ chmod 400 <key>.pem
+$ ssh -i <key>.pem ec2-user@<public-ip>
+----
 
 === Infrastructure as Code
 
